# applied-machine-learning

./: .buildinfo  12-NearestNeighborsMethods.html  14-DecisionTreesAndForests.html  15-RegressionAndRegularisation.html  16-ArtificialNeuralNetworks.html  17-ModelLearningStrategies.html  2-Modeling.html  3-ReadingAndPlotting.html  4-PreprocessingAndFeatureExtraction.html  5-DimensionalityReduction bySubspaceProjections.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: 1-Introduction.ipynb  intro.md
notebooks/: _toc.yml
notebooks/_build/.doctrees/: 1-Introduction.doctree  12-NearestNeighborsMethods.doctree  13-SupportVectorMachine(SVM).doctree  14-DecisionTreesAndForests.doctree  15-RegressionAndRegularisation.doctree  16-ArtificialNeuralNetworks.doctree  17-ModelLearningStrategies.doctree  2-Modeling.doctree  3-ReadingAndPlotting.doctree  4-PreprocessingAndFeatureExtraction.doctree  5-DimensionalityReduction bySubspaceProjections.doctree  6-UnsupervisedLearning.doctree  7-TrainingProcess.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
notebooks/_build/html/: 1-Introduction.html  13-SupportVectorMachine(SVM).html  14-DecisionTreesAndForests.html  16-ArtificialNeuralNetworks.html  17-ModelLearningStrategies.html  4-PreprocessingAndFeatureExtraction.html  6-UnsupervisedLearning.html  7-TrainingProcess.html  genindex.html  intro.html  objects.inv  searchindex.js
notebooks/_build/jupyter_execute/: 1-Introduction.ipynb  12-NearestNeighborsMethods.ipynb  (+12 more)
(+1 files in other folders)
