[project]
name = "applied-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam S.",email = "98590550+adamsochorec@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book (>=1.0.4.post0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.23.0,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "tornado (>=6.5,<7.0)",
    "setuptools (>=78.1.1,<79.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
